Multiple improvements
